# Trajectory-planning

./: CMakeLists.txt  README.md  augmented_lagrangian.h  barrier_function.h  corridor.cc  ilqr_optimizer.cc  logger.cpp  logger.hpp  tracker.cc  tracker.h  vehicle_model.h
algorithm/ilqr/: corridor.h  typedefs.h  vehicle_model.cc
config/: config.rviz
launch/: run.launch  test.launch
